--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,6 @@
     <title>Website for git</title>
 </head>
 <body>
-    <center><h1>This is the website for git</h1></center>
+    <center><h1>This is the website for index</h1></center>
 </body>
 </html>   
